--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dana Scully</a>  
+            <a href="#">Sherlock Holmes</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/scully-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,6 +866,21 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
+                <img src="../../images-patternlab/daenerys-35-35.jpg">
+              </div>
+            </div>
+            <div class="layout-slat__content">
+              <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+              <div class="view__meta">
+                Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="views-row">
+          <div class="layout-slat layout-slat--small">
+            <div class="layout-slat__media">      
+              <div class="view__author-image">
                 <img src="../../images-patternlab/tyrion-35-35.jpg">
               </div>
             </div>
@@ -881,28 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/cj-35-35.jpg">
+                <img src="../../images-patternlab/cameron-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+              <div class="view__title"><a href="#">Rebel Mission to Ord Mantell</a></div>
               <div class="view__meta">
-                Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="views-row">
-          <div class="layout-slat layout-slat--small">
-            <div class="layout-slat__media">      
-              <div class="view__author-image">
-                <img src="../../images-patternlab/sherlock-35-35.jpg">
-              </div>
-            </div>
-            <div class="layout-slat__content">
-              <div class="view__title"><a href="#">You Can't Take The Sky From Me</a></div>
-              <div class="view__meta">
-                Posted by <strong>Sherlock Holmes</strong> | January 1 at 6:20am
+                Posted by <strong>Cameron Howe</strong> | September 4 at 9:04am
               </div>
             </div>
           </div>
@@ -925,6 +925,21 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
+              &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class=&quot;layout-slat__content&quot;&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__meta&quot;&gt;
+                Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
+              &lt;/div&gt;
+            &lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;views-row&quot;&gt;
+          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
+            &lt;div class=&quot;layout-slat__media&quot;&gt;      
+              &lt;div class=&quot;view__author-image&quot;&gt;
                 &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
@@ -940,28 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/cameron-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Rebel Mission to Ord Mantell&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
-              &lt;/div&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class=&quot;views-row&quot;&gt;
-          &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
-            &lt;div class=&quot;layout-slat__media&quot;&gt;      
-              &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/sherlock-35-35.jpg&quot;&gt;
-              &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;You Can't Take The Sky From Me&lt;/a&gt;&lt;/div&gt;
-              &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Sherlock Holmes&lt;/strong&gt; | January 1 at 6:20am
+                Posted by &lt;strong&gt;Cameron Howe&lt;/strong&gt; | September 4 at 9:04am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
