--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-innovation-detail/04-pages-innovation-detail.html
@@ -628,15 +628,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Dana Scully</a>  
+                    <a href="#">Sherlock Holmes</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+                    How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
                   </div>
                 </div>
             </article>
