--- a/public/sites/all/themes/gesso_microsites/patternlab/public/patterns/03-templates-01-landing-page/03-templates-01-landing-page.escaped.html
+++ b/public/sites/all/themes/gesso_microsites/patternlab/public/patterns/03-templates-01-landing-page/03-templates-01-landing-page.escaped.html
@@ -26,6 +26,34 @@
       &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
         &lt;div class=&quot;layout-slat&quot;&gt;
           &lt;div class=&quot;layout-slat__media&quot;&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/cats/3/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
+&lt;/a&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;layout-slat__content&quot;&gt;
+            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cats&lt;/a&gt;&lt;/h2&gt;
+            &lt;div class=&quot;node__date&quot;&gt;Oct 25, 2013
+&lt;/div&gt;
+            &lt;p&gt;This is a summary about Cats.&lt;/p&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/article&gt;
+      &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
+        &lt;div class=&quot;layout-slat&quot;&gt;
+          &lt;div class=&quot;layout-slat__media&quot;&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/business/10/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
+&lt;/a&gt;
+          &lt;/div&gt;
+          &lt;div class=&quot;layout-slat__content&quot;&gt;
+            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Business&lt;/a&gt;&lt;/h2&gt;
+            &lt;div class=&quot;node__date&quot;&gt;Apr 13, 2013
+&lt;/div&gt;
+            &lt;p&gt;This is a summary about Business.&lt;/p&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
+      &lt;/article&gt;
+      &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
+        &lt;div class=&quot;layout-slat&quot;&gt;
+          &lt;div class=&quot;layout-slat__media&quot;&gt;
             &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/nature/3/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
 &lt;/a&gt;
           &lt;/div&gt;
@@ -54,42 +82,14 @@
       &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
         &lt;div class=&quot;layout-slat&quot;&gt;
           &lt;div class=&quot;layout-slat__media&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/people/4/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/transport/7/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
 &lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;layout-slat__content&quot;&gt;
-            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;People&lt;/a&gt;&lt;/h2&gt;
-            &lt;div class=&quot;node__date&quot;&gt;Jul 22, 2013
+            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Transport&lt;/a&gt;&lt;/h2&gt;
+            &lt;div class=&quot;node__date&quot;&gt;Sep 4, 2013
 &lt;/div&gt;
-            &lt;p&gt;This is a summary about People.&lt;/p&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-      &lt;/article&gt;
-      &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
-        &lt;div class=&quot;layout-slat&quot;&gt;
-          &lt;div class=&quot;layout-slat__media&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/city/7/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
-&lt;/a&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;layout-slat__content&quot;&gt;
-            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;City&lt;/a&gt;&lt;/h2&gt;
-            &lt;div class=&quot;node__date&quot;&gt;Mar 22, 2013
-&lt;/div&gt;
-            &lt;p&gt;This is a summary about City.&lt;/p&gt;
-          &lt;/div&gt;
-        &lt;/div&gt;
-      &lt;/article&gt;
-      &lt;article class=&quot;node node--article node--image-teaser&quot; role=&quot;article&quot;&gt;
-        &lt;div class=&quot;layout-slat&quot;&gt;
-          &lt;div class=&quot;layout-slat__media&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;http://lorempixel.com/140/105/cats/3/&quot; alt=&quot;Thumbnail 4:3&quot; height=&quot;105&quot; width=&quot;140&quot;&gt;
-&lt;/a&gt;
-          &lt;/div&gt;
-          &lt;div class=&quot;layout-slat__content&quot;&gt;
-            &lt;h2 class=&quot;node__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cats&lt;/a&gt;&lt;/h2&gt;
-            &lt;div class=&quot;node__date&quot;&gt;Oct 25, 2013
-&lt;/div&gt;
-            &lt;p&gt;This is a summary about Cats.&lt;/p&gt;
+            &lt;p&gt;This is a summary about Transport.&lt;/p&gt;
           &lt;/div&gt;
         &lt;/div&gt;
       &lt;/article&gt;
