--- a/public/sites/all/themes/gesso_microsites/patternlab/public/patterns/03-templates-01-landing-page/03-templates-01-landing-page.html
+++ b/public/sites/all/themes/gesso_microsites/patternlab/public/patterns/03-templates-01-landing-page/03-templates-01-landing-page.html
@@ -15,18 +15,18 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
 
     <!--[if gte IE 9]><!-->
-    <link rel="stylesheet" href="../../../../css/styles.css?1448905698" media="all">
+    <link rel="stylesheet" href="../../../../css/styles.css?1448909382" media="all">
     <!--<![endif]-->
 
     <!--[if lt IE 9]>
-    <link rel="stylesheet" href="../../../../css/no-mq.css?1448905698" media="all">
+    <link rel="stylesheet" href="../../../../css/no-mq.css?1448909382" media="all">
     <![endif]-->
 
     <script src="../../drupal/misc/jquery.js?v=1.4.4"></script>
     <script src="../../drupal/misc/jquery.once.js?v=1.2"></script>
     <script src="../../drupal/misc/drupal.js?v=7.33"></script>
 
-    <script src="../../../../js/mobile-menu.js?1448905698"></script>
+    <script src="../../../../js/mobile-menu.js?1448909382"></script>
 
     <!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
     		<!-- never cache patterns -->
@@ -36,8 +36,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1448905698" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1448905698" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1448909382" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1448909382" media="all" />
 		
 
     <!-- End Pattern Lab -->
@@ -75,6 +75,34 @@
       <article class="node node--article node--image-teaser" role="article">
         <div class="layout-slat">
           <div class="layout-slat__media">
+            <a href="#"><img src="http://lorempixel.com/140/105/cats/3/" alt="Thumbnail 4:3" height="105" width="140">
+</a>
+          </div>
+          <div class="layout-slat__content">
+            <h2 class="node__title"><a href="#">Cats</a></h2>
+            <div class="node__date">Oct 25, 2013
+</div>
+            <p>This is a summary about Cats.</p>
+          </div>
+        </div>
+      </article>
+      <article class="node node--article node--image-teaser" role="article">
+        <div class="layout-slat">
+          <div class="layout-slat__media">
+            <a href="#"><img src="http://lorempixel.com/140/105/business/10/" alt="Thumbnail 4:3" height="105" width="140">
+</a>
+          </div>
+          <div class="layout-slat__content">
+            <h2 class="node__title"><a href="#">Business</a></h2>
+            <div class="node__date">Apr 13, 2013
+</div>
+            <p>This is a summary about Business.</p>
+          </div>
+        </div>
+      </article>
+      <article class="node node--article node--image-teaser" role="article">
+        <div class="layout-slat">
+          <div class="layout-slat__media">
             <a href="#"><img src="http://lorempixel.com/140/105/nature/3/" alt="Thumbnail 4:3" height="105" width="140">
 </a>
           </div>
@@ -103,42 +131,14 @@
       <article class="node node--article node--image-teaser" role="article">
         <div class="layout-slat">
           <div class="layout-slat__media">
-            <a href="#"><img src="http://lorempixel.com/140/105/people/4/" alt="Thumbnail 4:3" height="105" width="140">
+            <a href="#"><img src="http://lorempixel.com/140/105/transport/7/" alt="Thumbnail 4:3" height="105" width="140">
 </a>
           </div>
           <div class="layout-slat__content">
-            <h2 class="node__title"><a href="#">People</a></h2>
-            <div class="node__date">Jul 22, 2013
+            <h2 class="node__title"><a href="#">Transport</a></h2>
+            <div class="node__date">Sep 4, 2013
 </div>
-            <p>This is a summary about People.</p>
-          </div>
-        </div>
-      </article>
-      <article class="node node--article node--image-teaser" role="article">
-        <div class="layout-slat">
-          <div class="layout-slat__media">
-            <a href="#"><img src="http://lorempixel.com/140/105/city/7/" alt="Thumbnail 4:3" height="105" width="140">
-</a>
-          </div>
-          <div class="layout-slat__content">
-            <h2 class="node__title"><a href="#">City</a></h2>
-            <div class="node__date">Mar 22, 2013
-</div>
-            <p>This is a summary about City.</p>
-          </div>
-        </div>
-      </article>
-      <article class="node node--article node--image-teaser" role="article">
-        <div class="layout-slat">
-          <div class="layout-slat__media">
-            <a href="#"><img src="http://lorempixel.com/140/105/cats/3/" alt="Thumbnail 4:3" height="105" width="140">
-</a>
-          </div>
-          <div class="layout-slat__content">
-            <h2 class="node__title"><a href="#">Cats</a></h2>
-            <div class="node__date">Oct 25, 2013
-</div>
-            <p>This is a summary about Cats.</p>
+            <p>This is a summary about Transport.</p>
           </div>
         </div>
       </article>
@@ -260,10 +260,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1448905698">
+	<script id="pl-js-polyfill-insert-1448909382">
 		(function() {
 			if (self != top) {
-				var cb = '1448905698';
+				var cb = '1448909382';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -272,10 +272,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1448905698">
+	<script id="pl-js-insert-1448909382">
 		(function() {
 			if (self != top) {
-				var cb = '1448905698';
+				var cb = '1448909382';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
